<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ic_launcher_background"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/barrasuperior"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:background="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/barrasupe"
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_marginBottom="57dp"
            android:contentDescription="@string/Primeira_barra_sup"
            android:scaleType="centerCrop"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/barrasup" />

        <ImageView
            android:id="@+id/cabeça_dir"
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:contentDescription="@string/logo_cabeca_dir"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/cabeca_esq" />

        <ImageView
            android:id="@+id/tx_numerologia"
            android:layout_width="271dp"
            android:layout_height="44dp"
            android:contentDescription="@string/Numerologia"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/cabeca_esq"
            app:layout_constraintStart_toEndOf="@+id/cabeça_dir"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/tx_numerologia" />

        <ImageView
            android:id="@+id/cabeca_esq"
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="8dp"
            android:contentDescription="@string/logo_cabeca_esq"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/cabeca_dir" />

        <ImageView
            android:id="@+id/barrainfi"
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_marginTop="57dp"
            android:contentDescription="@string/Barra_inf"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/barrainf" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout

        android:id="@+id/home"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/barrainferior"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/barrasuperior">

        <EditText
            android:id="@+id/campoNome"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:background="@drawable/caixa_texto"
            android:ems="10"
            android:gravity="center_vertical"
            android:hint="@string/digite_o_seu_nome"
            android:inputType="text"
            android:textColor="#FFFFFF"
            android:textColorHighlight="#BFBFBF"
            android:textColorHint="#BFBFBF"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.254" />

        <TextView
            android:id="@+id/tv_nascimento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="Data de nascimento"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/campoNome" />

        <EditText
            android:id="@+id/tv_dia"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:background="@drawable/caixa_texto"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/tv_dia"
            android:inputType="numberDecimal"
            android:maxLength="2"
            android:textColor="#FFFFFF"
            android:textColorHint="#BFBFBF"
            android:textSize="18sp"
            app:layout_constraintEnd_toStartOf="@+id/tv_mes"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_nascimento" />

        <EditText
            android:id="@+id/tv_mes"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:background="@drawable/caixa_texto"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/tv_mes"
            android:inputType="numberDecimal"
            android:maxLength="2"
            android:textColor="#FFFFFF"
            android:textColorHint="#BFBFBF"
            android:textSize="18sp"
            app:layout_constraintEnd_toStartOf="@+id/tv_ano"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/tv_dia"
            app:layout_constraintTop_toBottomOf="@+id/tv_nascimento" />

        <EditText
            android:id="@+id/tv_ano"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:background="@drawable/caixa_texto"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/tv_ano"
            android:inputType="numberDecimal"
            android:maxLength="4"
            android:textColor="#FFFFFF"
            android:textColorHint="#BFBFBF"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/tv_mes"
            app:layout_constraintTop_toBottomOf="@+id/tv_nascimento" />

        <ImageButton
            android:id="@+id/bt_calc"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/efeito_calc"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_mes" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <FrameLayout
        android:id="@+id/viewPage"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/barrainferior"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/barrasuperior">

    </FrameLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/barrainferior"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:background="@color/colorPrimary"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.998"
        tools:context=".MainActivity"
        tools:ignore="DuplicateIds">

        <ImageView
            android:id="@+id/barrasupe2"
            android:layout_width="0dp"
            android:layout_height="3dp"
            android:layout_marginBottom="57dp"
            android:contentDescription="@string/Segunda_barra_sup"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/barrainf"
            tools:ignore="MissingConstraints" />

        <ImageButton
            android:id="@+id/bt_Home"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/bt_home"
            android:contentDescription="@string/Menu_Home"
            android:src="@drawable/ic_home_30"
            android:tint="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/bt_Resultado"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/bt_Resultado"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/bt_home"
            android:contentDescription="@string/Menu_resultado"
            android:src="@drawable/ic_person30"
            android:tint="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/bt_Compatibilidade"
            app:layout_constraintStart_toEndOf="@id/bt_Home"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/bt_Compatibilidade"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/bt_home"
            android:contentDescription="@string/Menu_compatibilidade"
            android:src="@drawable/ic_coracao_30"
            android:tint="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/bt_Triangulo"
            app:layout_constraintStart_toEndOf="@id/bt_Resultado"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/bt_Triangulo"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/bt_home"
            android:contentDescription="@string/Menu_triangulo"
            android:src="@drawable/ic_triangulo_30"
            android:tint="@color/white"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/bt_Arcanos"
            app:layout_constraintStart_toEndOf="@id/bt_Compatibilidade"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/bt_Arcanos"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/bt_home"
            android:contentDescription="@string/Menu_arcanos"
            android:src="@drawable/ic_ampulheta_30"
            android:tint="@color/white"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/bt_Descricao"
            app:layout_constraintStart_toEndOf="@id/bt_Triangulo"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/bt_Descricao"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/bt_home"
            android:contentDescription="@string/Menu_descricao"
            android:src="@drawable/ic_olho_30"
            android:tint="@color/white"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/bt_Arcanos"
            app:layout_constraintTop_toTopOf="parent" />


        <ImageView
            android:id="@+id/barrainfi2"
            android:layout_width="0dp"
            android:layout_height="3dp"
            android:layout_marginTop="57dp"
            android:contentDescription="@string/Segunda_barra_inf"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/barrasup"
            tools:ignore="MissingConstraints" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>